--- a/notebooks/Test_trained_models.ipynb
+++ b/notebooks/Test_trained_models.ipynb
@@ -13,7 +13,16 @@
    "execution_count": 1,
    "id": "24fc43ca-f461-4a2e-b850-ced48ad9dccf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-04-10 00:04:03.597822: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-04-10 00:04:03.597855: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import pandas as pd\n",
@@ -150,6 +159,28 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "55480413-4fdb-4969-90c0-a9445c3edf10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../trained_models/ANN_RA_sklearn.pkl', 'rb') as p:\n",
+    "    ann_sk_ra = pickle.load(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ccb992a0-6aae-4635-ba46-dcd749d76a6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../trained_models/ANN_MRR_sklearn.pkl', 'rb') as p:\n",
+    "    ann_sk_mrr = pickle.load(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "4b377552-5e0f-4a31-aff4-98dcf337a256",
    "metadata": {},
    "outputs": [
@@ -157,7 +188,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-06 20:49:09.614715: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "2022-04-10 00:04:06.482389: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-04-10 00:04:06.482426: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2022-04-10 00:04:06.482446: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (debian): /proc/driver/nvidia/version does not exist\n",
+      "2022-04-10 00:04:06.482684: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -185,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "d4f20755-c466-4fa5-bb6c-153f38db8973",
    "metadata": {},
    "outputs": [
@@ -193,7 +227,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the serial number of observation:  123\n"
+      "Enter the serial number of observation:  111\n"
      ]
     }
    ],
@@ -204,59 +238,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "aa6106ae-95f8-45b0-b235-a97cdf764b1d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prediction of MRR by random forest is 0.021567197224689406\n",
-      "Prediction of MRR by decision tree is 0.020499193923779253\n",
-      "Prediction of MRR by gradient boosting is 0.020719631261482952\n",
-      "Prediction of MRR by artificial neural network is 360.92734\n",
-      "Real value of MRR is 0.019335260115608\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/explorer/.conda/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
       "  warnings.warn(\n",
-      "/home/explorer/.conda/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeRegressor was fitted with feature names\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeRegressor was fitted with feature names\n",
       "  warnings.warn(\n",
-      "/home/explorer/.conda/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
       "  warnings.warn(\n",
-      "2022-04-06 20:49:17.227228: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:116] None of the MLIR optimization passes are enabled (registered 2)\n",
-      "2022-04-06 20:49:17.246352: I tensorflow/core/platform/profile_utils/cpu_utils.cc:112] CPU Frequency: 2495570000 Hz\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Prediction of MRR by random forest is \"+str(rfr_mrr.predict(X[a_:b_].to_numpy())[0]))\n",
-    "print(\"Prediction of MRR by decision tree is \"+str(dtr_mrr.predict(X[a_:b_].to_numpy())[0]))\n",
-    "print(\"Prediction of MRR by gradient boosting is \"+str(gbr_mrr.predict(X[a_:b_].to_numpy())[0]))\n",
-    "print(\"Prediction of MRR by artificial neural network is \"+str(dnn_ra.predict(X[a_:b_])[0][0]))\n",
-    "print(\"Real value of MRR is \"+str(Y[a_:b_].to_numpy()[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "744deb4a-5b41-4e5a-9ea4-27b5c3346d30",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/explorer/.conda/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/explorer/.conda/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeRegressor was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/explorer/.conda/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but MLPRegressor was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -264,11 +260,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction of RA by random forest is 0.8336736507936507\n",
-      "Prediction of RA by decision tree is 0.8346666666666667\n",
-      "Prediction of RA by gradient boosting is 0.8756215934854272\n",
-      "Prediction of RA by artificial neural network is 360.92734\n",
-      "Real value of RA is 0.779\n"
+      "Prediction of MRR by random forest is 0.010601076838535195\n",
+      "Prediction of MRR by decision tree is 0.013566515948281855\n",
+      "Prediction of MRR by gradient boosting is 0.013777576574763228\n",
+      "Prediction of MRR by sklearn ann is 142.0860285891782\n",
+      "Prediction of MRR by tensorflow ann is 33.178764\n",
+      "Real value of MRR is 0.01177990430622\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Prediction of MRR by random forest is \"+str(rfr_mrr.predict(X[a_:b_].to_numpy())[0]))\n",
+    "print(\"Prediction of MRR by decision tree is \"+str(dtr_mrr.predict(X[a_:b_].to_numpy())[0]))\n",
+    "print(\"Prediction of MRR by gradient boosting is \"+str(gbr_mrr.predict(X[a_:b_].to_numpy())[0]))\n",
+    "print(\"Prediction of MRR by sklearn ann is \"+str(ann_sk_mrr.predict(X[a_:b_].to_numpy())[0]))\n",
+    "print(\"Prediction of MRR by tensorflow ann is \"+str(dnn_ra.predict(X[a_:b_])[0][0]))\n",
+    "print(\"Real value of MRR is \"+str(Y[a_:b_].to_numpy()[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "744deb4a-5b41-4e5a-9ea4-27b5c3346d30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction of RA by random forest is 0.8326021693121693\n",
+      "Prediction of RA by decision tree is 1.1214444444444445\n",
+      "Prediction of RA by gradient boosting is 0.8840836819119717\n",
+      "Prediction of RA by sklearn ann is 64.17153798666887\n",
+      "Prediction of RA by tensorlow is 33.178764\n",
+      "Real value of RA is 0.674\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but MLPRegressor was fitted with feature names\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -276,7 +315,8 @@
     "print(\"Prediction of RA by random forest is \"+str(rfr_ra.predict(X[a_:b_].to_numpy())[0]))\n",
     "print(\"Prediction of RA by decision tree is \"+str(dtr_ra.predict(X[a_:b_].to_numpy())[0]))\n",
     "print(\"Prediction of RA by gradient boosting is \"+str(gbr_ra.predict(X[a_:b_].to_numpy())[0]))\n",
-    "print(\"Prediction of RA by artificial neural network is \"+str(dnn_ra.predict(X[a_:b_])[0][0]))\n",
+    "print(\"Prediction of RA by sklearn ann is \"+str(ann_sk_ra.predict(X[a_:b_].to_numpy())[0]))\n",
+    "print(\"Prediction of RA by tensorlow is \"+str(dnn_ra.predict(X[a_:b_])[0][0]))\n",
     "print(\"Real value of RA is \"+str(Y2[a_:b_].to_numpy()[0]))"
    ]
   },
@@ -290,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "54547291-57b4-418d-b943-b07232cbafe8",
    "metadata": {},
    "outputs": [
@@ -321,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "31f540cf-2bba-4840-9c15-fe6b4763a669",
    "metadata": {},
    "outputs": [
@@ -329,10 +369,10 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the graphene percentage:  0.014\n",
-      "Enter the Feed:  134\n",
-      "Enter the rotation in RPM:  1234\n",
-      "Enter the DOC:  0.3\n"
+      "Enter the graphene percentage:  1\n",
+      "Enter the Feed:  1\n",
+      "Enter the rotation in RPM:  1\n",
+      "Enter the DOC:  1\n"
      ]
     }
    ],
@@ -345,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "9382a9e6-3158-49a7-a346-c1af1eb1ee23",
    "metadata": {},
    "outputs": [],
@@ -355,36 +395,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "9abc3766-0791-4d7b-b0b0-37d39225691b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prediction of MRR and RA by random forest is 0.039476301454351305 and 1.1929563492063489\n",
-      "Prediction of MRR and RA by decision tree is 0.03783037740644716 and 1.4571428571428573\n",
-      "Prediction of MRR and RA by gradient boosting is 0.03826861570640396 and 1.2356470610103059\n",
-      "Prediction of MRR and RA by artificial neural network is -7.8313866 and 146.32965\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/explorer/.conda/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
       "  warnings.warn(\n",
-      "/home/explorer/.conda/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
       "  warnings.warn(\n",
-      "/home/explorer/.conda/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeRegressor was fitted with feature names\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeRegressor was fitted with feature names\n",
       "  warnings.warn(\n",
-      "/home/explorer/.conda/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeRegressor was fitted with feature names\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeRegressor was fitted with feature names\n",
       "  warnings.warn(\n",
-      "/home/explorer/.conda/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
       "  warnings.warn(\n",
-      "/home/explorer/.conda/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but MLPRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/home/explorer/.miniconda3/envs/pydaas/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but MLPRegressor was fitted with feature names\n",
       "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction of MRR and RA by random forest is 0.025927908857203336 and 0.7148596825396827\n",
+      "Prediction of MRR and RA by decision tree is 0.025320055627140833 and 0.831875\n",
+      "Prediction of MRR and RA by gradient boosting is 0.02584526104756667 and 0.4916652478401731\n",
+      "Prediction of MRR and RA by sklearn ANN is 0.6206132557493809 and 0.09650736528347431\n",
+      "Prediction of MRR and RA by tensorlow ANN is 0.6127607 and 0.09961874\n"
      ]
     }
    ],
@@ -395,7 +440,9 @@
     "\" and \"+str(dtr_ra.predict(inp_)[0]))\n",
     "print(\"Prediction of MRR and RA by gradient boosting is \"+str(gbr_mrr.predict(inp_)[0])+\n",
     "\" and \"+str(gbr_ra.predict(inp_)[0]))\n",
-    "print(\"Prediction of MRR and RA by artificial neural network is \"+str(dnn_mrr.predict(inp_)[0][0])+\n",
+    "print(\"Prediction of MRR and RA by sklearn ANN is \"+str(ann_sk_mrr.predict(inp_)[0])+\n",
+    "\" and \"+str(ann_sk_ra.predict(inp_)[0]))\n",
+    "print(\"Prediction of MRR and RA by tensorlow ANN is \"+str(dnn_mrr.predict(inp_)[0][0])+\n",
     "\" and \"+str(dnn_ra.predict(inp_)[0][0]))"
    ]
   },
@@ -424,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
