--- a/notebooks/decision_tree_regressor.ipynb
+++ b/notebooks/decision_tree_regressor.ipynb
@@ -9,6 +9,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3fe722a-1973-45dd-be55-34d4682d4323",
+   "metadata": {},
+   "source": [
+    "Let's first import necessary libraries.\n",
+    "Pandas is used for data frame handling.\n",
+    "Numpy is for used for numercial analysis.\n",
+    "Sci-kit learn module provides various submodules to preprocess the data, create and train the machine learning model and to test it's performance.\n",
+    "matplotlib is used for plotting of graphs.\n",
+    "Tensorflow module provides various submodules to preprocess the data, create and train the machine learning model and to test it's performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "1ad2e12f-d0d5-4297-9e91-ac44b2607f2a",
@@ -27,6 +40,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b552112e-8fbd-4382-9851-3384cb6dbe55",
+   "metadata": {},
+   "source": [
+    "Fisrt we import data from the csv file and save it as a pandas data frame in variable grd.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "9bc435d6-d118-4d9e-84ec-4cebf8695198",
@@ -34,6 +55,14 @@
    "outputs": [],
    "source": [
     "grd = pd.read_csv(\"../data/graphene_data_final.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a18d3ed-ae93-4e45-a92f-8292ac0179a1",
+   "metadata": {},
+   "source": [
+    "We take the 1st four columns Graphene_percentage, feed, RPM and DOC as input and MRR as 2st output and `Ra` as 2nd output."
    ]
   },
   {
@@ -48,6 +77,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "baba4524-240c-4990-83c8-a95449d06d05",
+   "metadata": {},
+   "source": [
+    "Now we will split the input and output data to respective test and train data sets.\n",
+    "X_train is the input and Y_train is the output data set used to train the model to predict `MRR`.\n",
+    "X_test and Y_test are input and output data sets respectively those are used to test the performance of the `MRR` predictor model.\n",
+    "X_train2 is the input and Y2_train is the output data set used to train the model to predict `Ra`.\n",
+    "X_test2 and Y2_test are input and output data sets respectively those are used to test the performance of the `Ra` predictor model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "4ed3fe54-662b-4b03-8fda-07094bee48c3",
@@ -56,6 +97,15 @@
    "source": [
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size = 0.3, random_state=33)\n",
     "X_train2, X_test2, Y2_train, Y2_test = train_test_split(X, Y2, test_size = 0.3, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea6cc17e-10a0-4f94-a296-7e315f33dd43",
+   "metadata": {},
+   "source": [
+    "`tree.DecisionTreeRegressor()` function is used to initiate a decision tree model object.\n",
+    "`fit` function is used to train the model using the train data sets given within them and them `score` function is used to test the performance of the model."
    ]
   },
   {
@@ -77,6 +127,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "784d5bba-ad60-4b7a-bd2a-9df9fe51eac5",
+   "metadata": {},
+   "source": [
+    "The above model is produced without any parameter tunning.\n",
+    "But we can improve the model by training and testing the models with various sets of multiple parameters and can get the best performing model to predict our output.\n",
+    "That's why now we create parameter grid that contains various possible values for parameters to find the best set of parameters."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "97f11f13-b67e-45cf-a10d-95cd9f45fb08",
@@ -92,6 +152,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "308a25bb-0abf-48e4-b611-0d1c3ae3a79f",
+   "metadata": {},
+   "source": [
+    "Grid search algorithm streamlines the process of finding the best sets of parameters for a given model and provided when parameter grid and a basic model is given to it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "554da502-fa31-4f7b-91d5-f9c85027cf4a",
@@ -99,6 +167,15 @@
    "outputs": [],
    "source": [
     "dtr_cv = tree.DecisionTreeRegressor(random_state=16)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8086678b-6714-47fd-95c3-38235c47c09e",
+   "metadata": {},
+   "source": [
+    "GridsearchCV function creates a gridsearch object that takes another model object, parameter grid, number of cross validations to be done as input.\n",
+    "Upon fitting the gridsearch model object with train data, it trains and validates itself to find the best set of parameters from the given paramter grid. It is worth mentioning that grid search cv used cross validation algorithm to split the train data into a particular number of parts and uses one part to validate the model and other parts to train the model. At last it is able to find the highest scoring model and its parameters."
    ]
   },
   {
@@ -128,6 +205,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8eaa50c-425a-4533-9000-9fbc8ec1aefb",
+   "metadata": {},
+   "source": [
+    "As we can see grid search model acts a model itself since it inherits the basic model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "96a6e08e-a9c8-4d67-8196-4f3572bdc6fd",
@@ -146,6 +231,14 @@
    ],
    "source": [
     "CV_dtr.score(X_test, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "914b6065-26fd-46e2-a509-66d418376e03",
+   "metadata": {},
+   "source": [
+    "Using gridsearch we are able to find a model that performs 2% better than the original basic model. The improvement may seem miniscule because the train data set is small and the basic model itself applies certain algorithms to find the best parameters."
    ]
   },
   {
@@ -170,6 +263,14 @@
    ],
    "source": [
     "CV_dtr.best_params_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "348695d3-7435-4e98-b794-9ece310175ee",
+   "metadata": {},
+   "source": [
+    "This model is used to predict surface roughness(Ra)."
    ]
   },
   {
@@ -231,10 +332,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6a260453-17dd-4a51-a7b7-8b4418a3c4a4",
+   "metadata": {},
+   "source": [
+    "As we can see the test score is pretty low, we, therefore, can conclude that the gridsearch algorithm using the decision tree model is not able to find the actual relation between the input variables and surface roughness."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "967d3233-2b83-4344-889e-4366c84d281e",
    "metadata": {},
    "source": [
-    "Now let's save the best performing decision tree model as a \"Pickle\" file."
+    "Now let's save the best performing decision tree models as a \"Pickle\" file."
    ]
   },
   {
@@ -245,7 +354,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "with open('../trained_models/decision_tree_MRR.pkl','wb') as f:\n",
+    "with open('../trained_models/decision_tree_.pkl','wb') as f:\n",
     "    pickle.dump(CV_dtr,f)\n",
     "with open('../trained_models/decision_tree_RA.pkl','wb') as f:\n",
     "    pickle.dump(CV_dtr2,f)"
@@ -268,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
